# xmt

./: .gitignore  README.md  package.json  pnpm-lock.yaml  quasar.config.js
.trellis/: .template-hashes.json
backend/: .env.example  README.md  pyproject.toml  test-email.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  auth.py  comment.py  csv_files.py  health.py  lol.py  tool_sync.py  wedding.py
backend/app/cli/: __init__.py  create_password_user.py
backend/app/core/: middlewares.py
backend/app/db/: config.py  init.py
backend/app/models/: __init__.py  base.py  comment.py  csv_file.py  health_check.py  tool_sync_item.py  user.py  user_auth_account.py  verification_code.py  wedding_rsvp.py
backend/app/schemas/: auth.py  comment.py  csv_file.py  lol.py  tool_sync.py  wedding.py
backend/app/services/: auth_service.py  csv_service.py  email_service.py  jwt_service.py  lol_service.py  password_service.py  tool_sync_service.py
backend/app/settings/: config.py
backend/app/templates/emails/: password_reset.html  verification_code.html
backend/migrations/models/: 0_20260519174335_init.py  1_20260522000000_auth_csv.py  2_20260525000000_tool_sync.py  3_20260525120000_csv_title_remark.py  4_20260526000000_multi_provider_auth.py  5_20260526171631_account_linking.py  6_20260527000000_email_auth.py  7_20260528003631_wedding_comments.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quasar.config.js  uno.config.js
frontend/scripts/: postinstall.cjs
frontend/src-capacitor/: package.json  (+3 more)
(+194 files in other folders)
