[project]
name = "xinming-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Xinming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aerich>=0.9.2",
    "aiomysql>=0.2.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "tortoise-orm>=0.25.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.aerich]
tortoise_orm = "app.db.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
